--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,17 @@
     margin-top: 20px;
     text-align: center;
 }
+
+.card-wrapper{
+    display: flex;
+    flex-direction: row;
+    margin: auto;   
+    align-items: center;
+    justify-content: center;
+    width: 600px;
+    padding: 10px;
+}
+
+.card-image{
+    margin: 10px;
+}
